# travel-expense-app

./: .gitignore  AGENTS.md  README.md  pyproject.toml  共有仕様書.md
docs/specs/: 2026-07-18-destination-first-entry.md  2026-07-18-local-fare-ledger.md  2026-07-19-ver2-past-claims-master.md
examples/: request.json
src/travel_expense/: __init__.py  cli.py  errors.py  exporter.py  models.py
tests/: conftest.py  test_exporter.py
web/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml
web/.openai/: hosting.json
web/app/: extras.css  globals.css  layout.tsx  page.tsx  travel-expense-app.tsx
web/app/api/fare/: route.ts
web/app/lib/: db.ts  domain.ts  excel.ts  types.ts
web/db/: index.ts
web/public/: manifest.webmanifest
web/tests/: domain.test.ts  rendered-html.test.mjs
